# ustaad_connect

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASKS.md  alter_db.py  check_review_col.py  docker-compose.yml  pyproject.toml  seed_peshawar.py  simulate_provider.py  skills-lock.json  test_geocoding.py  test_submit_rating.py  update_islamabad.py  update_profile_pics.py  ustaad_connect_mobile_postman.json  ustaad_connect_postman.json
.agents/skills/openai-agents-fastapi/: SKILL.md
.agents/skills/openai-agents-sdk/: SKILL.md
docs/: Challenges_Text.md  env-setup.md  interactive_list_buttons.md  meta_media_carousels.md  provider_app_mockup.html  spec.md
provider_mobile_app/: .gitignore  README.md  provider_app_mockup.html  pubspec.yaml  run_output.txt
provider_mobile_app/Image/: Image 2.html  Image 4.html  Image 6.html  Image 8.html  Image 9.markdown
provider_mobile_app/android/app/: build.gradle.kts
provider_mobile_app/ios/Runner/: Info.plist
provider_mobile_app/ios/Runner.xcodeproj/: project.pbxproj
provider_mobile_app/lib/: main.dart
provider_mobile_app/linux/: CMakeLists.txt
provider_mobile_app/linux/runner/: my_application.cc
provider_mobile_app/macos/Flutter/: GeneratedPluginRegistrant.swift
provider_mobile_app/web/: index.html  manifest.json
provider_mobile_app/windows/: CMakeLists.txt
src/api/: agent.py  audio.py  database.py  geocoding.py  main.py  models.py  whatsapp.py
src/api/routes/: __init__.py  (+4 more)
src/ustaad_connect/: __init__.py
tests/: conftest.py  test_audio_override.py  test_flow.py  test_language.py
(+139 files in other folders)
